# index.js
@@ -81,24 +81,4 @@ app.set('view engine', 'ejs');
 app.set('views', configuration.dir.views);
 app.use(express.static( configuration.dir.static ));
 
-app.get('/html/dashboard', async (req, res) => {
-    const songs = await dependencies.models.song.find();
-
-    for(const song in songs) {
-        for(const _artist in songs[song].artists) {
-            const artist_id = songs[0].artists[_artist];
-
-            const artist = await dependencies.models.artist.findOne({id: artist_id});
-
-            songs[0].artists[_artist].first_name = artist.first_name;
-
-            songs[0].artists[_artist].last_name = artist.last_name;
-        }
-    }
-
-    res.render('dashboard', {
-        songs: songs
-    });
-});
-
 require('./routes')(dependencies);
